del3/demo/svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: demo
spec:
  selector:
    name: nginx-svc-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-svc-demo
  namespace: demo
spec:
  containers:
  -  image: nginx:1.16.1
     name: nginx
     ports:
       - containerPort: 8080
