del3/demo/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-nodeport
  namespace: demo
spec:
  selector:
    name: nginx-svc-demo
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-svc-demo
  namespace: demo
  labels:
    name: nginx-svc-demo
spec:
  containers:
    - image: nginx:1.16.1
      name: nginx
      ports:
        - containerPort: 80
